{
    "name": "HeroInputAction",
    "maps": [
        {
            "name": "Hero",
            "id": "7a5e4b4b-af7e-4196-977c-be7d37604376",
            "actions": [
                {
                    "name": "HorisontalMovement",
                    "type": "Button",
                    "id": "9cebd0f4-bba8-4922-bd2b-a754bad920b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SaySomething",
                    "type": "Button",
                    "id": "3c306bed-e451-4db8-86db-235f4b9628c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard",
                    "id": "30afe21f-f091-4e6a-9edd-35432bc7003b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorisontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f761f5da-df33-43b0-b45b-4c89c7ea8deb",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorisontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1c43c641-82d4-482d-94cf-70c047854f67",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorisontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "7ee747f5-c252-4820-aaff-0b5b580470bb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SaySomething",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}